--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body{
     background: url('https://cdn.pixabay.com/photo/2022/12/05/13/14/christmas-village-7636756_1280.jpg');
     background-size: cover;
     background-repeat: no-repeat;
+    height: 100%;
+    width: 100%
 }
 
 
@@ -19,7 +21,9 @@ body{
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(4, 1fr);
     gap: 3vw;
-    margin: 20px;
+    padding: 20px;
+    width: 100vw;
+    height: 100vh;
 }
 
 .door {
@@ -47,11 +51,12 @@ body{
     #calendar {
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(8, 1fr);
-        gap: 20px;
+        gap: 10px;
+        padding: 10px;
     }
     .door{
-        width: 20vw;
-        height: 20vw;
+        width: auto;
+        height: auto;
         font-size: 2.5em;
     }
 }
